[package]
name = "minchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2"
rand = "0.8.5"
crossbeam = "0.3.0"
crossbeam-channel = "0.5.2"
colored = "2"
json = "0.12.4"
serde_json = "1.0.59"
serde = "1.0.136"
